--- a/index.css
+++ b/index.css
@@ -1055,3 +1055,11 @@
 .home-text46 {
   display: inline-block;
 }
+
+.footer-text {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size: 0.8em; 
+  margin-top: 40px;
+}
